# sunburst

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .nvimlog  .nvimrc.lua  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
engine/core/: CMakeLists.txt  base.h  bit.h  bitwise.h  compiler.h  conversion.h  enum.h  error.h  handle.h  log.h  os.h  timer.h  types.h  unique_ptr.h
engine/core/_impl/: base.cpp  config.h  conversion.cpp  conversion.h  error.cpp  error.h  log.cpp  log.h  string_format.cpp  types.cpp
engine/core/_impl/config/: hash_cfg.h
engine/core/_impl/container/: small_vector_base.h
engine/core/_impl/hash/: crc32.cpp  crc64.cpp  fnv1a.h
engine/core/_impl/io/: file.cpp  file_system.cpp  file_system_platform.h  local_file_system_layer.cpp  local_file_system_layer.h  path.cpp
engine/core/_impl/memory/: alloc.cpp  alloc.h  memory.cpp
engine/core/_impl/platform/: bit_linux.h  bitwise_linux.h  bitwise_win.h  compiler_linux.h  compiler_macos.h  compiler_win.h  file_system_posix.hpp  file_system_win.cpp  malloc_linux.cpp  malloc_posix.hpp  malloc_win.cpp  os_linux.cpp  os_macos.cpp  os_win.cpp  os_win.h  timer_decl_win.h  timer_win.h
engine/core/_impl/string/: string_format.h  string_utility.cpp
engine/core/container/: ring_buffer.h  small_vector.h  static_vector.h  vector.h
engine/core/hash/: crc.h  fnv1a.h  hash_str.h
engine/core/io/: file.h  file_system.h  file_system_layer.h  io.h  path.h
engine/core/memory/: alloc.h  global_heap.h  memory.h  memory_arena.h
engine/core/memory/allocator/: allocator.h  allocator_view.h  global_heap_allocator.h  incremental_allocator.h  null_allocator.h  pool_allocator.h  stl_allocator.h
engine/core/memory/provider/: global_heap_provider.h  memory_arena_provider.h
engine/core/string/: static_string.h  string_format.h  utility.h
engine/sb_core/: CMakeLists.txt  bit.h  bit_utility.h  cast.h  compiler.h  conversion.h  core.h  enum.h  error.h  extern_prolog.h  handle.h  hook.h  log.h  os.h  system.h  timer.h  unique_ptr.h  utility.h
engine/sb_core/_impl/: compiler_linux.h  config.h  conversion.cpp  conversion.h  error.cpp  error.h  log.cpp  log.h  os_linux.h  os_win.h  string_format.cpp
engine/sb_core/_impl/config/: hash_cfg.h
engine/sb_core/_impl/container/: dynamic_small_array_base.h  sarray_base.h  small_array_base.h  small_vector_base.h
engine/sb_core/_impl/error/: error.cpp  error.h  error_code.cpp  status_code.cpp
engine/sb_core/_impl/hash/: crc32.cpp  crc64.cpp  fnv1a.h  hashstr_policy.h
engine/sb_core/_impl/io/: file.cpp  file_input_stream.cpp  file_stream.cpp  file_system.cpp  file_system.h  io.h  path.cpp  (+7 more)
engine/sb_core/container/: array.h  darray.h  dynamic_array.h  dynamic_fix_array.h  farray.h  fix_array.h  ring_buffer.h  sarray.h  small_array.h  small_vector.h  static_vector.h  vector.h
engine/sb_core/error/: error.h  error_code.h  status.h  status_code.h
engine/sb_core/hash/: crc.h  fnv1a.h  hash32_str.h  hash64_str.h  hash_str.h  hasher.h
engine/sb_core/io/: file.h  file_hdl.h  file_input_stream.h  file_stream.h  file_system.h  file_system_layer.h  io.h  path.h  virtual_file_system.h
engine/sb_core/memory/: alloc.h  global_heap.h  memory.h  memory_arena.h  memory_tag.h  utility.h  virtual_memory_backstore.h
engine/sb_core/string/: conversion.h  fix_string.h  format.h  static_string.h  string.h  string_format.h  string_utility.h  utility.h
engine/sb_core/system/: system.h
engine/test/sb_core_test/: CMakeLists.txt  bit_operations_test.cpp  bit_test.cpp  compiler_test.cpp  core_test.cpp  crc32_test.cpp  crc64_test.cpp  dynamic_fix_array_test.cpp  dynamic_small_array_test.cpp  file_hdl_test.cpp  fix_string_test.cpp  fnv1a32_test.cpp  fnv1a64_test.cpp  global_heap_allocator_test.cpp  hash32_str_test.cpp  hash64_str_test.cpp  incremental_allocator_test.cpp  math_test.cpp  memory_arena_allocator_test.cpp  memory_test.cpp  null_allocator_test.cpp  pool_allocator_test.cpp  ring_buffer_Test.cpp  stl_allocator_test.cpp  string_conversion_test.cpp  string_format_test.cpp  string_utility_test.cpp
samples/sb_advent_2022/: CMakeLists.txt
samples/sb_advent_2022/data/: day22.txt  day22_ref.txt
samples/sb_advent_2022/src/: advent.h  advent_day_01.cpp  advent_day_02.cpp  advent_day_03.cpp  advent_day_04.cpp  advent_day_05.cpp  advent_day_06.cpp  advent_day_07.cpp  advent_day_08.cpp  advent_day_09.cpp  advent_day_10.cpp  advent_day_11.cpp  advent_day_12.cpp  advent_day_13.cpp  advent_day_14.cpp  advent_day_15.cpp  advent_day_16.cpp  advent_day_17.cpp  advent_day_18.cpp  advent_day_19.cpp  advent_day_20.cpp  advent_day_21.cpp  advent_day_22.cpp  main.cpp  utility.cpp  utility.h
test/base_test/: CMakeLists.txt  base_test.cpp
test/core_test/: CMakeLists.txt  alloc_test.cpp  bit_test.cpp  bitwise_test.cpp  compiler_test.cpp  conversion_test.cpp  crc32_test.cpp  crc64_test.cpp  enum_test.cpp  fnv1a32_test.cpp  fnv1a64_test.cpp  handle_test.cpp  hash_str_test.cpp  incremental_allocator_test.cpp  null_allocator_test.cpp  pool_allocator_test.cpp  ring_buffer_Test.cpp  small_vector_test.cpp  static_string_test.cpp  static_vector_test.cpp  stl_allocator_test.cpp  string_format_test.cpp  string_utility_test.cpp  unique_ptr_test.cpp
test/sb_base_test/: CMakeLists.txt  base_test.cpp
test/sb_core_test/: CMakeLists.txt  alloc_test.cpp  bit_test.cpp  bit_utility_test.cpp  conversion_test.cpp  core_test.cpp  crc32_test.cpp  crc64_test.cpp  dynamic_fix_array_test.cpp  enum_test.cpp  farray_test.cpp  file_hdl_test.cpp  file_test.cpp  fix_array_test.cpp  fix_string_test.cpp  fnv1a32_test.cpp  fnv1a64_test.cpp  global_heap_allocator_test.cpp  handle_test.cpp  hash32_str_test.cpp  hash64_str_test.cpp  hash_str_test.cpp  incremental_allocator_test.cpp  memory_arena_allocator_test.cpp  null_allocator_test.cpp  pool_allocator_test.cpp  ring_buffer_Test.cpp  sarray_test.cpp  small_array_test.cpp  small_vector_test.cpp  static_string_test.cpp  static_vector_test.cpp  status_test.cpp  stl_allocator_test.cpp  string_format_test.cpp  string_utility_test.cpp  unique_ptr_test.cpp
(+522 files in other folders)
